solid Headway posting to database, need to clean up.

--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -168,12 +168,13 @@
     right: 20px;
   }
    
-  .entryLog{
+  .entryLog {
 
-    border-style: solid, white;
+    border-style: solid;
+    border-color: white;
     border-width: 40%;
     width: 40%;
-
+    border-radius: 12px;
 
   }
 
